--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -5,18 +5,18 @@
 <form action="" method="post">
     {{ form.hidden_tag() }}
     <p>
-        {{ form.job.label }}<br>
-        {{ form.job(class="form-control") }}<br>
-        {% for error in form.job.errors %}
+        {{ form.title.label }}<br>
+        {{ form.title(class="form-control") }}<br>
+        {% for error in form.title.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
         {% endfor %}
     </p>
     <p>
-        {{ form.team_leader.label }}<br>
-        {{ form.team_leader(class="form-control") }}<br>
-        {% for error in form.team_leader.errors %}
+        {{ form.chef_id.label }}<br>
+        {{ form.chef_id(class="form-control") }}<br>
+        {% for error in form.chef_id.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
@@ -32,24 +32,23 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.collaborators.label }}<br>
-        {{ form.collaborators(class="form-control") }}<br>
-        {% for error in form.collaborators.errors %}
+        {{ form.ingredients.label }}<br>
+        {{ form.ingredients(class="form-control") }}<br>
+        {% for error in form.ingredients.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
         {% endfor %}
     </p>
-        <p>
-        {{ form.category.label }}<br>
-        {{ form.category(class="form-control") }}<br>
-        {% for error in form.category.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>{{ form.is_finished() }} {{ form.is_finished.label }}</p>
+<!--        <p>-->
+<!--        {{ form.category.label }}<br>-->
+<!--        {{ form.category(class="form-control") }}<br>-->
+<!--        {% for error in form.category.errors %}-->
+<!--            <p class="alert alert-danger" role="alert">-->
+<!--                {{ error }}-->
+<!--            </p>-->
+<!--        {% endfor %}-->
+<!--    </p>-->
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     {{message}}
 </form>
