--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,11 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/css/style.css"/>
-    <title>{{title}}</title>
+    <title>Кулинарный портал</title>
 </head>
 <body>
-
     <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#"><h2>Миссия Колонизация Марса</h2></a>
+    <a class="navbar-brand" href="#"><h2>Готовь или покупай</h2></a>
     {% if current_user.is_authenticated %}
         <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
     {% else %}
@@ -23,10 +22,10 @@
         </p>
     {% endif %}
     </nav>
-    <h4>И на Марсе будут яблони цвести!</h4>
     <main role="main" class="container">
         {% block content %}{% endblock %}
     </main>
+
 </body>
 </html>
 
