--- a/templates/table.html
+++ b/templates/table.html
@@ -2,31 +2,25 @@
 
 {% block content %}
 
-    <h1>Works Log</h1>
-    <a href="departments" class="btn btn-secondary">Go to departments</a>
+    <h1>Блюда, доступные сейчас</h1>
     {% if current_user.is_authenticated %}
-        <a href="add_job" class="btn btn-secondary">Add job</a>
+        <a href="add_job" class="btn btn-secondary">Добавить блюдо</a>
         <br>
     {% endif %}
     {% for dish in orders_list %}
         <br>
         <table class="table">
-            <tr><th>Action №{{job.id}}</th></tr>
-            <tr><td>Title of activity</td> <td>Team leader</td> <td>Duration</td>
-                <td>List of collaborators</td> <td>Hazard category</td> <td>is finished</td></tr>
-            <tr><td>{{dish.job}} </td> <td>{{dish.user.surname + ' ' + dish.user.name}}</td> <td>{{dish.work_size}} hours</td>
-                <td>{{dish.collaborators}}</td> <td>{{dish.category}}</td>
-                <td>{% if job.is_finished %}
-                        <div>Done</div>
-                    {% else %}
-                        <div>Not yet</div>
-                    {% endif %}</td></tr>
-            {% if current_user.is_authenticated and ((current_user == job.user) or (current_user.id == 1)) %}
+            <tr><th>Блюдо №{{dish.id}}</th></tr>
+            <tr><td>Название блюда</td> <td>Повар</td> <td>Длительность приготовления</td>
+                <td>Список ингредиентов</td> <td>Категория блюда</td></tr>
+            <tr><td>{{dish.title}} </td> <td>{{dish.user.surname + ' ' + dish.user.name}}</td> <td>{{dish.work_size}} часов</td>
+                <td>{{dish.ingredients}}</td> <td>{{dish.categories.name}}</td>
+            {% if current_user.is_authenticated and ((current_user == dish.user) or (current_user.id == 1)) %}
             <div>
-                <a href="/add_job/{{ job.id }}" class="btn btn-warning">
+                <a href="/add_job/{{ dish.id }}" class="btn btn-warning">
                     Изменить
                 </a>
-                <a href="/job_delete/{{ job.id }}" class="btn btn-danger">
+                <a href="/job_delete/{{ dish.id }}" class="btn btn-danger">
                     Удалить
                 </a>
             </div>
