--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,16 @@
           crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/css/style.css"/>
     <title>Кулинарный портал</title>
+    <style>
+        .card {
+            width: 100;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
     <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#"><h2>Готовь или покупай</h2></a>
     {% if current_user.is_authenticated %}
