--- a/templates/table.html
+++ b/templates/table.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>Блюда, доступные сейчас</h1>
+    <h1 align="center">Блюда, доступные сейчас</h1>
     {% if current_user.is_authenticated %}
         <a href="add_dish" class="btn btn-primary">Добавить блюдо</a>
         <br>
