--- a/templates/dishes.html
+++ b/templates/dishes.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Публикация нового блюда</h1>
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% if message %}
         <p class="alert alert-danger" role="alert">
                     {{ message }}
