--- a/templates/table.html
+++ b/templates/table.html
@@ -10,7 +10,7 @@
     {% for dish in orders_list %}
         <br>
         <div class="card" style="width: 50%">
-            <img src="static/img/photo2.jpg" class="card-img-top" alt="Nope">
+            <img src=static/img/{{loop.index}}.jpg class="card-img-top" alt="Nope">
             <div class="card-body">
                 <p class="card-text">
                     <ul class="list-group list-group-flush">
@@ -25,6 +25,9 @@
                                 </a>
                                 <a href="/dish_delete/{{dish.id}}" class="btn btn-danger">
                                     Удалить
+                                </a>
+                                <a href="/file_upload/{{loop.index}}" class="btn btn-success">
+                                    Добавить фото
                                 </a>
                             </li>
                         {% endif %}
