--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#"><h2>Готовь или покупай</h2></a>
+    <a class="navbar-brand" href="/"><h2>Готовь или покупай</h2></a>
     {% if current_user.is_authenticated %}
-        <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+        <a class="navbar-brand" href="/profile/{{current_user.id}}">{{ current_user.name }}</a>
     {% else %}
         <p>
             <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
