--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,14 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css"/>
     <title>Кулинарный портал</title>
     <style>
         .card {
             width: 100;
             margin: auto;
+        }
+        .card-img-user {
+            max-width: 10
         }
     </style>
 </head>
